created file uploade functionality

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/freelance
 spring.datasource.username=postgres
