--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=@spring.profiles.active@
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/freelance
 spring.datasource.username=postgres
