--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     </profiles>
 
     <build>
+        <finalName>file-uploader</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
